# stellarphot

./: .all-contributorsrc  .git-blame-ignore-revs  .gitignore  .harper-dictionary.txt  .jp_app_launcher_stellarphot.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .rtd-environment.yml  .travis.yml  CHANGES.rst  LICENSE.rst  MANIFEST.in  README.md  README.rst  RELEASE.md  acp.py  autoui_widget_viewer.ipynb  codecov.yml  ignore-words.txt  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  pixi.yml  publish.yml  test.yml  update-pixi-lock-files.yml
binder/: environment.yml  requirements.txt
docs/: conf.py  diagrams-01-package-overview.md  diagrams-02-entry-points.md  diagrams-03-user-flows.md  diagrams-04-call-graphs.md  index.rst
docs/_static/: astropy.css
docs/dev/: index.rst  moving_code.rst  settings.rst  testing_installation.rst
docs/glowing-waffles/: index.rst
docs/glowing_waffles/: index.rst
docs/stellarphot/: api_reference.rst  getting_started.rst  index.rst  settings.rst
docs/stellarphot/user_guide/: calibrating_photometry.rst  doing_photometry.rst  index.rst  using_photometry_data.rst
examples/: GALLERY_HEADER.rst  plot_example_settings.py  plot_schema.py
glowing-waffles/: __init__.py  photometry.py  source_detection.py
glowing-waffles/notebooks/: acp.py  example_interactive_plot.ipynb  source_detection.py
glowing_waffles/: __init__.py  _astropy_init.py  conftest.py  coordinates.py  photometry.py  source_detection.py
glowing_waffles/differential_photometry/: __init__.py  catalog_search.py  filter_transform_ivezic_2007.py  magnitude_transforms.py  one_vsx_mag.py  vsx_mags.py
glowing_waffles/differential_photometry/tests/: image-viewer.py  test_catalog_search.py  test_magnitude_transforms.py  test_vsx_mags.py
glowing_waffles/io/: __init__.py  aij.py
glowing_waffles/notebooks/: ObserveACP.ipynb  acp.py  comp-star-plots.ipynb  image-viewer-working-copy.ipynb  image_viewer_demo.ipynb  observe class.ipynb
glowing_waffles/tests/: coveragerc  make_wcs.py  setup_package.py  test_coordinates.py  test_detection.py  test_sources.csv
glowing_waffles/tests/data/: test_sources.csv
glowing_waffles/visualization/: __init__.py  aij_plots.py  astro_widgets.py  comparison_functions.py  multi_night_plots.py  seeing_profile_functions.py
glowing_waffles/visualization/tests/: test_seeing_profile.py
licenses/: LICENSE.rst
stellarphot/: __init__.py  _astropy_init.py  catalogs.py  conftest.py  coordinates.py  core.py  photometry.py  source_detection.py  table_representations.py  version.py
stellarphot/analysis/: __init__.py  exotic.py  transit_fitting.py
stellarphot/analysis/data/: exotic-to-mod-candidate.json  tic-template-for-exotic-candidate.json  tic-template-for-exotic-known.json
stellarphot/analysis/tests/: test_exotic.py  test_transit_fitting.py
stellarphot/differential_photometry/: __init__.py  aij_diff_mags.py  aij_rel_fluxes.py  catalog_search.py  magnitude_transforms.py  vsx_mags.py
stellarphot/differential_photometry/tests/: test_aij_diff_mags.py  test_aij_rel_fluxes.py  test_catalog_search.py  test_magnitude_transforms.py  test_vsx_mags.py
stellarphot/gui/: __init__.py  astrowidgets_workarounds.py  comparison_functions.py  custom_widgets.py  fits_opener.py  photometry_widget_functions.py  profile_and_comps.py  seeing_profile_functions.py  transit_fitting_gui.py  views.py
stellarphot/gui/tests/: test_astrowidgets_workarounds.py  test_comparison_functions.py  test_custom_widgets.py  test_fits_opener.py  test_gui_shims.py  test_photometry_runner.py  test_profile_and_comps.py  test_seeing_profile.py  test_tess_photometry_setup.py  test_transit_fitting_gui.py  test_views.py
stellarphot/gui_tools/: __init__.py  comparison_functions.py  fits_opener.py  photometry_widget_functions.py  profile_and_comps.py  seeing_profile_functions.py
stellarphot/gui_tools/tests/: test_comparison_functions.py  test_fits_opener.py  test_profile_and_comps.py  test_seeing_profile.py
stellarphot/io/: __init__.py  aavso.py  aavso_submission_schema.yml  aij.py  tess.py  tess_submission.py
stellarphot/io/tests/: test_aavso.py  test_aij_io.py  test_io_shims.py  test_tess.py  test_tess_submission.py
stellarphot/notebooks/: 01-initial-settings.ipynb  02-seeing-and-comparison.ipynb  03-final-review-of-settings.ipynb  04-launch-photometry.ipynb  4-final-review-of-settings.ipynb  ObserveACP.ipynb  calculate_aavso_mags_draft.ipynb  comp-star-plots.ipynb  comp-stars-template.ipynb  example_interactive_plot.ipynb  get_apass_comp_mags.ipynb  image-viewer-working-copy.ipynb  image_viewer_demo.ipynb  jp_app_launcher_stellarphot.yaml  new-transforms.ipynb  photometry_runner.ipynb  relative-flux-calculation.ipynb  run-launcher.ipynb  saveable-settings.ipynb  tess-EXOTIC-fit.ipynb  tess-initial-model-fit.ipynb  tess-intial-model-fit.ipynb  tess-second-model-fit.ipynb  tess-target-source-list-generator.ipynb
stellarphot/notebooks/photometry/: 01-viewer-seeing-template.ipynb  02-comp-star-plotter-template.ipynb  03-photometry-template.ipynb  (+12 more)
stellarphot/photometry/: __init__.py  photometry.py  profiles.py  source_detection.py
stellarphot/plotting/: __init__.py  aij_plots.py  multi_night_plots.py  transit_plots.py
stellarphot/settings/: __init__.py  aavso_models.py  aavso_submission.py  astropy_pydantic.py  autowidgets.py  constants.py  custom_widgets.py  fits_opener.py  models.py  settings_files.py  views.py
stellarphot/tests/: make_wcs.py  test_catalogs.py  test_core.py  test_core_minimal_imports.py  test_detection.py  test_import_isolation.py  test_photometry.py
stellarphot/transit_fitting/: __init__.py  core.py  exotic.py  gui.py  io.py  plotting.py
stellarphot/utils/: __init__.py  catalog_search.py  comparison_utils.py  magnitude_system_transforms.py  magnitude_transforms.py  version_migrator.py
stellarphot/visualization/: __init__.py  aij_plots.py  comparison_functions.py  fits_opener.py  multi_night_plots.py  photometry_widget_functions.py  seeing_profile_functions.py  transit_plots.py
(+75 files in other folders)
