[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "stellarphot"
dynamic = ["version"]
description = "A package for performing stellar photometry aimed at variable star and exoplanet research."
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.11"
authors = [
    { name = "The Stellarphot Team", email = "mattwcraig@gmail.com" },
]
# Base install is headless/scriptable: the science + data layer only. The
# Jupyter/ipywidgets GUI stack is an optional `[gui]` extra (see below), so
# `pip install stellarphot` can be used in a plain script without pulling in
# ipywidgets/ipyautoui/astrowidgets/ginga.
dependencies = [
    "astropy >=5",
    "astroquery",
    "bottleneck",
    "ccdproc",
    "lightkurve",
    "matplotlib",
    "pandas",
    "photutils >=2,<3",
    "pydantic >=2",
    "pyyaml",
    "platformdirs",
    "regions",  # stellarphot does not directly use regions, but
                # astroquery.XMatch gripes on import if it is not installed
]

[project.optional-dependencies]
# The Jupyter notebook / widget stack. All of stellarphot's GUIs run in
# notebooks, so a single `gui` extra covers the whole interactive experience.
gui = [
    "astrowidgets <0.4.0",  # The astrowidgets API changed significantly in 0.4,
                             # and stellarphot is not yet compatible with it.
    "ginga",
    "ipyautoui >=0.7.19",
    "ipyfilechooser",
    "ipywidgets",
    "jupyter-app-launcher >=0.3.0",
    "papermill",
]
exoplanet = [
    "lmfit",
    "pytransit",
]
# Deprecated alias for `exoplanet`, kept for backwards compatibility. Will be
# removed in a future release; use `stellarphot[exoplanet]` instead.
exo_fitting = [
    "stellarphot[exoplanet]",
]
# Everything a user needs for the full interactive experience.
all = [
    "stellarphot[gui]",
    "stellarphot[exoplanet]",
]
docs = [
    "stellarphot[gui]",  # API docs autodoc the GUI modules
    "sphinx",
    "sphinx-astropy[confv2]",
    "sphinx-design",
    "graphviz",
    "myst-parser",
    "sphinxcontrib-mermaid",
]
test = [
    "stellarphot[gui]",  # the test suite exercises the GUI widgets
    "black",
    "pre-commit",
    "pytest-astropy",
    "ruff",
    "tox",
]

[project.urls]
Homepage = "https://github.com/feder-observatory/stellarphot"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "stellarphot/_version.py"

[tool.hatch.build.targets.sdist]
# This section determines what files are included in the source distribution
include = [
    # The source code
    "/stellarphot",
    # Logo for JupyterLab launcher
    "/docs/_static/stellarphot-logo.svg",
    # Configuration for jupyter-app-launcher
    "/.jp_app_launcher_stellarphot.yaml"
]

[tool.hatch.build.targets.wheel.shared-data]
# This section determines what data files are included in the wheel
# and where they should eventually be installed in the user's environment.
"docs/_static/stellarphot-logo.svg" = "share/jupyter/stellarphot/stellarphot-logo.svg"
# This includes the notebooks used in the launcher
"stellarphot/notebooks" = "share/jupyter/stellarphot"
".jp_app_launcher_stellarphot.yaml" = "share/jupyter/jupyter_app_launcher/jp_app_launcher_stellarphot.yaml"

[tool.coverage]

    [tool.coverage.run]
    source = ["stellarphot"]
    omit = [
        "*/conftest*",
        "*/setup_package*",
        "*/tests/*",
        "*/**/tests/*",
        "*/*version*",
        "*/**/__init__.py",
        ".tox/**/*",
    ]

    [tool.coverage.report]
    exclude_lines = [
        # Have to re-enable the standard pragma
        "pragma: no cover",
        # Don't complain about packages we have installed
        "except ImportError",
        # Don't complain if tests don't hit assertions
        "raise AssertionError",
        "raise NotImplementedError",
        # Don't complain about connection errors
        "raise requests.ConnectionError",
        # Don't complain about script hooks
        "def main(.*):",
        # Ignore branches that don't pertain to this version of Python
        "pragma: py{ignore_python_version}",
    ]
    omit = [
        # Don't include tox stuff, please
        ".tox/**/*",
    ]

[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$|\.ipynb$'
# 'extend-exclude' excludes files or directories in addition to the defaults
# extend-exclude = '''
# # A regex preceded with ^/ will apply only to files and directories
# # in the root of the project.
# (
#   ^/docs
# )
# '''

[tool.ruff]
# ruff 0.6.0 started automatically linting notebooks. We are not ready for that yet.
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",    # E and W are the checks done by pycodestyle
    "W",
    "F",    # pyflakes checks
    "ARG",  # flake8-unused-arguments
    "UP",   # language updates
    "NPY",  # check for numpy deprecations
    "I",    # isort checks
    "B",    # flake8-bugbear
]
[tool.ruff.lint.per-file-ignores]
# Ignore `E402` and `F403` (import violations) in all `__init__.py` files.
"__init__.py" = ["E402", "F403"]
# Ignore F405 (variable may be from star imports) in docs/conf.py
"docs/conf.py" = ["F405", "ARG001"]

[tool.codespell]
# The diagrams-*.md files use short Mermaid node ids that codespell
# misreads as typos. The ExoFOP test data is a captured server response
# whose field names look like typos to codespell.
skip = '*.svg,docs/diagrams-*.md,stellarphot/io/tests/data/tic-236158940-exofop.json'
ignore-words = "ignore-words.txt"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "stellarphot",
    "docs",
]
norecursedirs = [
    "docs[\\/]_build",
    "docs[\\/]generated",
]
astropy_header = true
doctest_plus = "enabled"
text_file_format = "rst"
remote_data_strict = true
addopts = [
    "-ra",
    "--color=yes",
    "--doctest-rst",
    "--strict-config",
    "--strict-markers",
]
log_cli_level = "info"
xfail_strict = true
filterwarnings = [
    "error",
    # photutils' covariance_eigvals casts complex (zero-imaginary) eigenvalues to
    # real; numpy >= 2.5 returns complex eigvals even for a real symmetric
    # covariance matrix, triggering a benign ComplexWarning.
    'ignore:Casting complex values to real discards the imaginary part:numpy.exceptions.ComplexWarning:photutils.segmentation.catalog',
    # Back-compat shims for GUI code that moved to stellarphot.gui emit this on
    # import; it is intentional and covered by gui/tests/test_gui_shims.py.
    'ignore:.*has moved to stellarphot\.gui.*:astropy.utils.exceptions.AstropyDeprecationWarning',
    # Apparently bqplot is using deprecated traitlets APIs
    'ignore:\s+Sentinel is not a public part of the traitlets API:DeprecationWarning',
    # ginga is using something from asdf that has been deprecated
    'ignore:AsdfInFits has been deprecated:DeprecationWarning',
    # ipyautoui generates this warning...
    'ignore:metadata \{.+\} was set from the constructor:DeprecationWarning',
    # ipywidgets or ipyautoui generates this warning...
    'ignore:Passing unrecognized arguments to super:DeprecationWarning',
    # pandas will require pyarrow at some point, which is good to know, I guess...
    'ignore:[.\n]*Pyarrow will become a required dependency of pandas[.\n]*:DeprecationWarning',
    # pytransit eagerly imports arviz, which emits this on import (seen with
    # arviz 0.23.x). It is a third-party notice, not something we can act on.
    'ignore:[.\n]*ArviZ is undergoing a major refactor[.\n]*:FutureWarning',
    # ipyautoui is generating this on import because they still have some pydantic changes to make
    'ignore:Using extra keyword arguments on `Field` is deprecated:',
    # ipyautoui is generating another new traitlets warning
    'ignore:.*deprecated in traitlets 5.0.*:DeprecationWarning',
    # ipywidgets is using something deprecated in traitlets
    'ignore:Deprecated in traitlets 4.1, use the instance:DeprecationWarning',
    # ipyautoui is also using a deprecated traitlets feature
    'ignore:Traits should be given as instances, not types:DeprecationWarning',
    # Some WCS headers are issuing warnings
    'ignore:RADECSYS=:',
    # papermill is using deprecated jupyter paths
    'ignore:Jupyter is migrating its paths to use standard platformdirs:DeprecationWarning',
    # papermill is also using a deprecated method of getting current time
    'ignore:.*is deprecated and scheduled for removal.*:DeprecationWarning',
    # lightkurve is using a deprecated numpy interface
    'ignore:.*numpy.core.einsumfunc is deprecated and has been renamed.*:DeprecationWarning',
    # lightkurve issues a warning about an optional import
    'ignore:.*the tpfmodel submodule is not available without oktopus.*:UserWarning',
    # Apparently some change in pytest or coverage or pytest-cov exposes warnings
    # that were previously ignored.
    'ignore:.*:coverage.exceptions.CoverageWarning',
    # We are currently stuck on an old version of astrowidgets, which imports
    # astropy's deprecated TestRunner on import. astropy has changed both the
    # wording and the category of this warning over time (AstropyPendingDeprecation
    # -> AstropyDeprecation), so match any "TestRunner ... deprecated" message
    # regardless of category.
    'ignore:The TestRunner.*deprecated:'
]
