[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = glowing_waffles
description = A package for performing stellar photometry.
long_description = This is a package for doing stellar photometry that relies on astropy.
author = John Doe
author_email = johndoe@nowhere.com
license = BSD
url = http://astropy.org/
edit_on_github = False
github_project = glowing-waffle/glowing-waffles

[entry_points]
