[metadata]
name = glowing_waffles
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
author = Matt Craig
author_email = mattwcraig@gmail.com
description = A package for performing stellar photometry.
long_description = This is a package for doing stellar photometry that relies on astropy.
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/glowing-waffle/glowing-waffles
edit_on_github = False
github_project = glowing-waffle/glowing-waffles

[options]
install_requires =
    astropy>=3.1
    astroquery
    ccdproc
    ginga
    ipywidgets
    bottleneck
    photutils
    matplotlib
    pandas
    gatspy
python_requires = >=3.6
zip_safe = False
use_2to3 = False
packages = find:

[options.entry_points]
# console_scripts =

    # astropy-package-template-example = packagename.example_mod:main

[options.extras_require]
test =
    pytest
    pytest-astropy
docs =
    sphionx
    sphinx-astropy

[options.package_data]
* = *.c
glowing_waffles = data/*
glowing_waffles.differential_photometry.tests = data/*
glowing_waffles.tests = coveragerc

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[flake8]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py

[pycodestyle]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
